--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -17,11 +17,12 @@ header
     .links
     {
         font-family: inherit;
-        font-weight: 400;
+        font-weight: 600;
         margin-left: 56.25rem;
         margin-right: 3.125rem;
         padding-top: 1.25rem;
         text-align: right;
+
 
         a
         {
@@ -108,6 +109,41 @@ header
 
         
     }
+
+
+    .dir
+    {
+        position: fixed;
+        top: 850px;
+        right: 70px;
+        height: auto;
+        color: rgba(0,0,0,0.4);
+        font-size: 45px;
+        padding: 3px 15px;
+        z-index: 1;
+        background-color: rgba(0, 0, 0,0.5);
+        border-radius: 12px;
+
+        @media only screen and (max-width: 85.375em)
+        {
+            top: 550px;
+            right: 40px;
+            font-size: 40px;
+            padding: 3px 15px;
+            z-index: 1;
+            border-radius: 10px;
+        }
+
+        &:hover
+        {
+            color: rgba(0,0,0,0.6);
+            background-color: rgba(0, 0, 0,0.2);
+
+        }
+        
+    }
+
+
 
     
 }
