--- a/styles/style.css
+++ b/styles/style.css
@@ -314,7 +314,7 @@ header {
 
 header .links {
   font-family: inherit;
-  font-weight: 400;
+  font-weight: 600;
   margin-left: 56.25rem;
   margin-right: 3.125rem;
   padding-top: 1.25rem;
@@ -397,6 +397,35 @@ header h1 {
   font-size: 20px;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.45);
+}
+
+header .dir {
+  position: fixed;
+  top: 850px;
+  right: 70px;
+  height: auto;
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 45px;
+  padding: 3px 15px;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 12px;
+}
+
+@media only screen and (max-width: 85.375em) {
+  header .dir {
+    top: 550px;
+    right: 40px;
+    font-size: 40px;
+    padding: 3px 15px;
+    z-index: 1;
+    border-radius: 10px;
+  }
+}
+
+header .dir:hover {
+  color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 section {
