--- a/styles/_animation.scss
+++ b/styles/_animation.scss
@@ -103,3 +103,5 @@
 	-webkit-animation: text-focus-in 1.2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: text-focus-in 1.2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
+
+//DONE
