--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@
   margin-bottom: 2px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .btn-cate {
     font-size: 20px;
     width: 110px;
@@ -103,7 +103,7 @@
   transition: padding 0.3s  ease-in;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .btn--card {
     padding: 8px;
     font-size: 12.5px;
@@ -127,7 +127,7 @@
   letter-spacing: 1.5px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .lang-heading {
     text-align: center;
     padding-top: 20px;
@@ -168,7 +168,7 @@
   transition: box-shadow 0.3s  ease-in, -webkit-box-shadow 0.3s  ease-in;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .card {
     padding: 16px;
     border-radius: 18px;
@@ -187,7 +187,7 @@
   width: 55px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .res--img {
     height: 38px;
     width: 38px;
@@ -199,7 +199,7 @@
   width: auto;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .res--imglarge {
     height: 35px;
     width: auto;
@@ -216,7 +216,7 @@
   color: #2dce89;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .res--name {
     font-size: 19px;
     font-family: inherit;
@@ -238,7 +238,7 @@
   color: #172b4d;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .res--desc {
     font-size: 14px;
     font-family: inherit;
@@ -278,7 +278,7 @@ header div {
   margin-left: 35%;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   header div {
     margin-top: 13%;
   }
@@ -290,7 +290,7 @@ header div p {
   margin-top: -30px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   header div p {
     font-size: 80px;
     font-weight: 700;
@@ -302,7 +302,7 @@ header .blood {
   margin-top: -72px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   header .blood {
     margin-top: -58px;
   }
@@ -318,7 +318,7 @@ header .my--name {
   margin-left: -125px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   header .my--name {
     font-size: 15px;
     letter-spacing: 4.5px;
@@ -332,7 +332,7 @@ header .my--name span {
   letter-spacing: 2.5px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   header .my--name span {
     font-size: 20px;
     letter-spacing: 2px;
@@ -359,7 +359,7 @@ header .dir {
   border-radius: 12px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   header .dir {
     top: 550px;
     right: 40px;
@@ -390,7 +390,7 @@ section {
   padding-bottom: 50px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .tab--sections {
     height: auto;
     background-image: url("../img/tab_sec.png");
@@ -406,7 +406,7 @@ section {
   text-align: center;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   .tab--sections p {
     font-size: 45px;
   }
@@ -480,7 +480,7 @@ footer .my {
   font-size: 70px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   footer .my {
     font-size: 62px;
   }
@@ -497,7 +497,7 @@ footer .form p {
   font-size: 35px;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   footer .form p {
     font-size: 28px;
   }
@@ -554,6 +554,7 @@ footer .drop {
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  color: red;
 }
 
 html a:link, html a:visited {
@@ -562,16 +563,18 @@ html a:link, html a:visited {
   color: white;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   html {
     font-size: 56.25%;
     scroll-behavior: smooth;
+    color: yellow;
   }
 }
 
 @media only screen and (max-width: 75em) {
   html {
     font-size: 56.25%;
+    color: royalblue;
   }
 }
 
@@ -590,7 +593,7 @@ body {
           box-sizing: border-box;
 }
 
-@media only screen and (max-width: 85.375em) {
+@media only screen and (max-width: 96.875em) {
   body {
     font-size: 14px;
   }
