--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,6 +21,7 @@ html
 {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    color: red;
     a:link,a:visited
         {
                 text-decoration: none;
@@ -28,12 +29,13 @@ html
                 color:white;
         }
 }
-@media only screen and (max-width: 85.375em)//LATITUDE
+@media only screen and (max-width: 96.875em)//LATITUDE
 {
     html
     {
         font-size: 56.25%; 
         scroll-behavior: smooth;
+        color: yellow;
     } 
 }
 
@@ -42,6 +44,7 @@ html
     html 
     {
         font-size: 56.25%; 
+        color: royalblue;
     } 
 }
 
@@ -62,7 +65,7 @@ body
     box-sizing: border-box;
     
 
-    @media only screen and (max-width: 85.375em)
+    @media only screen and (max-width: 96.875em)
     {
         font-size: 14px;
     }
